--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <script>
         // آدرس API در PythonAnywhere
-        const API_URL = 'http://yourusername.pythonanywhere.com/api/data';
+        const API_URL = 'http://maziarasmani.pythonanywhere.com/api/data';
         
         let tempChart, humidityChart, pressureChart, luxChart, irradianceChart;
         let sensorData = [];
@@ -330,3 +330,4 @@
     </script>
 </body>
 </html>
+
