--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <script>
         // آدرس API در PythonAnywhere
-        const API_URL = 'http://maziarasmani.pythonanywhere.com/api/data';
+        const API_URL = 'http://maziarasmani.maziarasmani/deepseek_python_20250917_b6220b.py';
         
         let tempChart, humidityChart, pressureChart, luxChart, irradianceChart;
         let sensorData = [];
@@ -330,4 +330,5 @@
     </script>
 </body>
 </html>
+
 
